--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             Мене звати Жека Пупкін
         </H1>
         <P ALIGN="RIGHT">
-            <B>Я СТУДДЕНТ ГРУПИ IFc-106 І ТАК ДАЛІ</B>B>
+            <B>Я СТУДДЕНТ ГРУПИ IFc-106 І ТАК ДАЛІ</B>
         </P>
-            <HR="300PX">
+            <HR width="1500px" color="black">
       </DIV>
       <DIV>  
         <P>
-            За <a HREF="UDFH">цим посиланням</a> ви можете хнайти цікаву інформацію про <b>мову розмітки HTML5</b> та <b>мову стилів CSS3</b>
+            За <a HREF="https://www.youtube.com/watch?v=l7jKqfO00P8&t=57s"><b><i>цим посиланням</i>></b></a> ви можете хнайти цікаву інформацію про <b>мову розмітки HTML5</b> та <b>мову стилів CSS3</b>
         </P>
         <P>
             А цю картинку я побачив на просторах інтернету і хочу нею з вами поділитися.
