fixed bug at the function

--- a/main.html
+++ b/main.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Hello my dear friends</h1>
+    <ol>
+        <li>Ukraine</li>
+        <li>Poland</li>
+        <li>Spain</li>
+        <li>Italy</li>
+        <li>Germany</li>
+    </ol>
 </body>
 </html>
