Added my web Myindex.html

--- a/MyWeb/Myindex.html
+++ b/MyWeb/Myindex.html
@@ -17,14 +17,14 @@
             <a href="#biography">My biography |</a>
             <a href="#photo">Photo |</a>
             <a href="#shortinformation">Short information about me |</a>
-            <a href="#hobby">Hobby |</a>
+            <a href="#hobby">Hobby </a>
 
         </nav>
     </header>
 
     <article>
-        <header>
-            <h1 id="biography">My biography</h1>
+        <header id="biography">
+            <h1>My biography</h1>
 
 
             <p>Я, Непеляк Євген Васильович народився 31грудня 2001року в місті Івано-Франківськ.<br>
@@ -39,8 +39,8 @@
                 складене ЗНО.
                 Закінчив перший семестр з середнім балом 91,4.</p>
         </header>
-        <section>
-            <h1 id="photo">Photo</h1>
+        <section id="photo">
+            <h1>Photo</h1>
 
 
             <img src="photo_2019-09-16_23-41-34.jpg" alt="my photo" class="tphoto">
@@ -49,8 +49,8 @@
             <img src="photo_2020-03-17_15-31-26.jpg" alt="my photo" class="tphoto">
 
         </section>
-        <section>
-            <h1 id="hobby">My Hobby</h1>
+        <section id="hobby">
+            <h1>My Hobby</h1>
             З 6 років по 13 відвідував секцію Тхеквандо ВТФ , де здобув чимало перемог та мав коричневий пояс.Закинув
             через травму.Любив бігати футбол в дворі ,це так затягнулость ,що я вирішив спробувати у футболі ,грав за
             футбольну команду на область ,але через навчання мусив закинути і футбол.Дальше нічим не займався протягом
