--- a/MyWeb/Myindex.html
+++ b/MyWeb/Myindex.html
@@ -57,6 +57,32 @@
             пів року ,но я знайшов вихід та почав займатись вуличним воркаутом після чого в 11 класі мене затянуло в
             зал.Зараз займаюсь в залі приблизно повтора роки та маю непогані силові показники.
         </section>
+        <section id="hobby">
+            <h1>About my hobby</h1>
+            <a
+                href="https://uk.wikipedia.org/wiki/%D0%9F%D0%B0%D1%83%D0%B5%D1%80%D0%BB%D1%96%D1%84%D1%82%D0%B8%D0%BD%D0%B3"><b></b>Пауерліфтинг
+                або паверліфтинг</b></a> (англ. powerlifting: power — сила, і lift — підіймати) — силовий вид спорту, у
+            якому спортсмен долає вагу. Паверліфтинг, також називають силовим триборством. Пов'язано це з тим, що як
+            змагальні дисципліни в нього входять три вправи: присідання зі штангою на плечах, жим штанги лежачи на
+            горизонтальній лаві, і тяга штанги — які в сумі і визначають кваліфікацію спортсмена.<br>
+
+            У паверліфтингу, на відміну від бодибілдингу, важливі силові показники, а не краса тіла<div class="br">
+            </div>
+            <p align="center"><img src="powerlifting.jpg" alt="powerlifting" id="power"></p>
+            <br><br><br>
+
+            <a href="https://uk.wikipedia.org/wiki/%D0%9A%D1%80%D0%BE%D1%81%D1%84%D1%96%D1%82"> <b>Кросфіт</b></a> (з
+            англ. CrossFit) — брендована методика фітнесу, створена Ґреґом Ґласманом. Є зареєстрованою
+            торговою маркою організації CrossFit, Inc., яку заснували Ґреґ Ґласман та Лорен Дженай у 2000 році.
+            Тренування кросфіту просувають і як філософію фізичних вправ, і як змагальний вид спорту; до них входять
+            елементи високоінтенсивного інтервального тренування, важкої атлетики, пліометрики, пауерл
+            іфтингу,
+            гімнастики, гирьового спорту, зарядки, стронґмену та інші вправи. Такі тренування практикують члени більш
+            ніж 13 000 спортзалів-філій, більше половини яких розташовано у Сполучених Штатах, а також люди, що
+            виконують щоденні тренування<br>
+            <p align="center"><img src="croossfit.jpg" alt="croossfit" id="croossfit"></p>
+
+        </section>
     </article>
     <aside>
         <table id="shortinformation">
@@ -98,6 +124,7 @@
                     class="foot"></a>
         </p>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
