--- a/MyWeb/Myindex.html
+++ b/MyWeb/Myindex.html
@@ -124,7 +124,9 @@
                     class="foot"></a>
         </p>
     </footer>
-    <script src="app.js"></script>
+    <script>
+    alert('Sraka')
+    </script>
 </body>
 
 </html>
