--- a/canvas/index.html
+++ b/canvas/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CanvasLearn</title>
-    <style></style>
+    <style>
+        *{
+            margin: 0;
+        }
+    </style>
 </head>
 <body style="margin: 0;">
     <canvas id="canvas" style="display: block;">It is canvas</canvas>
